--- a/.sectins.md
+++ b/.sectins.md
@@ -3,5 +3,43 @@ PrimaryBGImagesSection {
 }
 
 TransparencyBGImagesSection{
-    
+
 }
+
+sections{ sectionName{ index.jsx style.js components{ image btn text } } }
+
+
+src{
+    app,
+    components{
+        template{
+            mainLayout.jsx
+        }
+        pages{
+            HomePage{
+            index.js
+            sections{
+                privateComponents
+            }
+        },
+        sections{
+            hero{
+                index.jsx
+                components{
+                    btn.jsx
+                }
+            }
+        },
+        publicComponents{
+            Header{
+                index.jsx
+                components{
+                    nav.jsx
+                }
+            }
+        }
+        },
+
+    }
+}
+
